--- a/index.html
+++ b/index.html
@@ -11,14 +11,25 @@
 
 </head>
 <body>
-
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
+  <main class="container">
+    <div class="left">
+      <div class="logo"><img src="./images/logo.svg" alt="Base Apparel"></div>
+      <h1>We're comming soon</h1>
+      <p>
+        Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+      <div>
+        <form>
+          <input type="email" name="email" id="email" placeholder="Email Address">
+          <img src="./images/icon-error.svg" alt="" id="error-icon">
+          <button type="submit"><img src="./images/icon-arrow.svg" alt="arrow"></button>
+          <small id="error-text">Please provide a valid email</small>
+        </form>
+      </div>
+    </div>
+    <div class="right"></div>
+  </main>
   <script src="./js/app.js"></script>
 </body>
 </html>
