add novalidate attr to html form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
       <div>
-        <form>
+        <form novalidate>
           <div class="form-control">
             <input type="email" name="email" id="email" placeholder="Email Address">
             <img src="./images/icon-error.svg" alt="" id="error-icon">
