--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <main class="container">
     <div class="left">
       <div><img src="./images/logo.svg" alt="Base Apparel" class="logo"></div>
+
+      <img src="./images/hero-mobile.jpg" alt="" id="hero-mobile">
+
       <h1><span>We're</span>coming soon</h1>
       <p>
         Hello fellow shoppers! We're currently building our new fashion store. 
